--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,13 @@ h1 {
 }
 
 body {
-  background-color:rgb(47, 82, 73);
+  background-color:rgb(3, 7, 6);
   color: whitesmoke;
   font-family: "Poppins", sans-serif;
   margin: 0;
 }
 .show {
-  background-color: #0f914c;
+  background-color: #04275c;
   border-radius: 3px;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -21,6 +21,8 @@ body {
 .show-container {
   display: flex;
   flex-wrap: wrap;
+  top: 30px;
+  padding-top: 75px;
 }
 
 .show-info {
@@ -56,4 +58,46 @@ body {
 
 .show:hover .show-summary {
   transform: translateY(0%);
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #04275c;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+  z-index: 1;
+}
+
+/* Links inside the navbar */
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  padding: 20px;
+}
+
+/* Change background on mouse-over */
+.navbar a:hover {
+  background: rgb(47, 82, 73);
+  color: black;
+}
+
+/* Main content */
+.main {
+  margin-top: 30px; /* Add a top margin to avoid content overlay */
+}
+
+.searchbar {
+  position: relative;
+  bottom:15px
 }
