--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,13 @@ h1 {
 }
 
 body {
-  background-color:rgb(3, 7, 6);
+  background-color:whitesmoke;
   color: whitesmoke;
   font-family: "Poppins", sans-serif;
   margin: 0;
 }
 .show {
-  background-color: #04275c;
+  background-color: #04275cbe;
   border-radius: 3px;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -23,6 +23,7 @@ body {
   flex-wrap: wrap;
   top: 30px;
   padding-top: 75px;
+  justify-content: center;
 }
 
 .show-info {
@@ -68,7 +69,7 @@ ul {
 
 .navbar {
   overflow: hidden;
-  background-color: #04275c;
+  background-color: #2083b1;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
@@ -88,7 +89,7 @@ ul {
 
 /* Change background on mouse-over */
 .navbar a:hover {
-  background: rgb(47, 82, 73);
+  background: rgb(58, 116, 126);
   color: black;
 }
 
